--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,9 @@ h2{
     font-size: 1em;
     color: rgb(211, 228, 243);
 }
+a {
+text-decoration: none;
+}
 button{
     font-size: 8px;
     height: 20px;
